packages/next-swc/crates/core/tests/errors/server-actions/3/output.js
/* __next_internal_action_entry_do_not_use__ x */ export const x = 1;
import ensureServerEntryExports from "private-next-rsc-action-proxy";
ensureServerEntryExports([
    x
]);
x.$$typeof = Symbol.for("react.server.reference");
x.$$id = "b78c261f135a7a852508c2920bd7228020ff4bd7";
x.$$bound = [];
x.$$with_bound = false;
